--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-mptt = "^0.16.0"
 flake8 = "^7.1.1"
 isort = "^5.13.2"
 pillow = "^10.4.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
