--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flake8 = "^7.1.1"
 isort = "^5.13.2"
 pillow = "^10.4.0"
 djangorestframework-simplejwt = "^5.3.1"
+celery = "^5.4.0"
 
 
 [build-system]
