--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ isort = "^5.13.2"
 pillow = "^10.4.0"
 djangorestframework-simplejwt = "^5.3.1"
 celery = "^5.4.0"
+faker = "^30.6.0"
 
 
 [build-system]
